--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -2,7 +2,7 @@
 :root {
 	--body-margin-top: 2vh;
 	--body-margin-bottom: 2vh;
-	--header-height: 1.5vh;
+	--header-height: 10vh;
 	--header-padding-top: 1vh;
 	--header-padding-bottom: 2vh;
 	--footer-height: 2vh;
@@ -32,7 +32,7 @@ body {
 /* --- HEADER --- */
 
 header {
-	height: var(--header-height);
+	/* height: var(--header-height); */
 }
 /* IE10+ workaround */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
@@ -52,8 +52,13 @@ header.down {
 	/* standard method to center an element with absolute position */
 }
 
-header span {
+header {
 	color: #cccccc;
+}
+
+.title {	
+	font-size: 5vw;
+	letter-spacing: 1.5vw;
 }
 
 /* split class to hold styles for the main branching option */
@@ -61,10 +66,12 @@ header span {
 	color: #cccccc;
 }
 
+/*
 .centered { 
 	text-align: center;
 	height: inherit;
 }
+*/
 
 /* --- MENU --- */
 
@@ -141,7 +148,7 @@ nav#menu li:before {
 }
 /* IE10+ workaround */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	.group { min-height:87.5vh; }
+	.group { min-height:78vh; }
 }
 
 /* collapsible headers */
@@ -340,45 +347,19 @@ a.ga, a.ga:hover {
 
 /* testing grounds */
 
-.title  {
-	display: block;
-	color: #ccc;
-	font-size: 5vw;
-	letter-spacing: 1.5vw;
-}
-
-.subtitle {
-	text-align: left;
-}
-
 .centered {
 	display: inline-block;
 	position: absolute;
 	right: 0;
-	margin-right: 1.5vw; /* match to .title letter-spacing */
-}
-
-header.up {
-	position: relative;
-	width: 100%;
-	height: inherit;
-	padding-top: 1vh;
-	padding-bottom: 2vh;
-}
-
-header.up .subtitle {
-	display: inline-block;
-}
-
-header.up .centered {
-	margin: 0;
+	padding-right: 3.5vw;
 }
 
 header.down {
 	position: absolute;
-	bottom: 60%;
+	bottom: 50%;
 	right: 50%;
-	transform: translateX(50%) translateY(100%);
+	width: 50%;
+	transform: translateX(50%) translateY(50%);
 	/* standard method to center an element with absolute position */
 }
 
@@ -386,10 +367,9 @@ header.down .title {
 	padding-bottom: 1vh;
 }
 
-header.down .subtitle {
-	display: inline-block;
+header.up .centered {
+	padding-right: 2vw;
 }
-
 
 @media (max-width: 600px) {
 	header.up .title {display: inline-block;}
