--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -376,5 +376,5 @@ header.up .centered {
 	header.up .subtitle {display: none;} 
 	header.up .centered {top: inherit; position: inherit;}
 	header.down .subtitle {display: none;}
-	header.down .centered {position: relative; width: 100%; right: unset; margin-right: 0px;}
+	header.down .centered {position: relative; width: 100%; right: unset; text-align: center; margin-right: 0px;}
 }
