--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -375,7 +375,7 @@ header.down {
 
 @media (max-width: 800px) {
 	header.up .title {display: inline-block;}
-	header.up .subtitle {display: none;} 
+	header .subtitle {display: none;} 
 	header.up .centered {top: inherit; position: inherit;}
 	header.down .subtitle {display: none;}
 	header.down .centered {position: relative; width: 100%; right: unset; text-align: center; margin-right: 0px;}
