--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 #wrapper {
-	/* min-height: calc(100vh - var(--body-margin-top) - var(--body-margin-bottom)); */
+	min-height: calc(100vh - 2*var(--body-margin-top) - 2*var(--body-margin-bottom));
 	margin-bottom: calc(0vh - var(--footer-height) - var(--footer-margin));
 	width: 50%;
 	margin: 0 auto;
