--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -2,7 +2,7 @@
 :root {
 	--body-margin-top: 2vh;
 	--body-margin-bottom: 2vh;
-	--header-height: 10vh;
+	--header-height: 10vh; 
 	--header-padding-top: 40vh;
 	--header-padding-bottom: 2vh;
 	--title-padding-bottom: 1vh;
@@ -20,7 +20,6 @@ body {
 	margin-bottom: var(--body-margin-bottom);
 	margin-left: 2vw;
 	margin-right: 2vw;
-	min-height: calc(100vh - var(--body-margin-top) - var(--body-margin-bottom));
 	font-size: large;
 	font-family: Ubuntu, Courier;
 	background-color: green;
@@ -32,9 +31,12 @@ body {
 
 #wrapper {
 	min-height: calc(100vh - 2*var(--body-margin-top) - 2*var(--body-margin-bottom));
-	margin-bottom: calc(0vh - var(--footer-height) - var(--footer-margin));
 	width: 50%;
 	margin: 0 auto;
+}
+/* IE10+ workaround */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+	#wrapper { min-height: 96vh; }
 }
 
 /* --- HEADER --- */
@@ -45,6 +47,12 @@ header {
 	padding-bottom: var(--header-padding-bottom);
 }
 
+/* IE10+ workaround */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+	header { padding-top: 40vh; padding-bottom: 2vh; }
+}
+
+
 .title {	
 	font-size: 5vw;
 	letter-spacing: 1.5vw;
@@ -52,7 +60,7 @@ header {
 }
 /* IE10+ workaround */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	.title { padding-bottom: 1vh;}
+	.title { padding-bottom: 1vh; }
 }
 
 /* split class to hold styles for the main branching option */
