--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -11,10 +11,6 @@
 	/* update IE workarounds below */
 }
 
-html {
-	height: 100%;
-}
-
 body {
 	margin-top: var(--body-margin-top);
 	margin-bottom: var(--body-margin-bottom);
@@ -26,7 +22,7 @@ body {
 }
 /* IE10+ workaround */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	body { margin-top: 2vh; margin-bottom: 2vh; min-height:96vh; }
+	body { margin-top: 2vh; margin-bottom: 2vh; }
 }
 
 #wrapper {
@@ -36,7 +32,7 @@ body {
 }
 /* IE10+ workaround */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	#wrapper { min-height: 96vh; }
+	#wrapper { min-height: 92vh; } 
 }
 
 /* --- HEADER --- */
