--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -66,7 +66,6 @@ header {
 
 .centered {
 	display: inline-block;
-	right: 0;
 	float: right;
 	padding-right: 1.5vw;
 }
@@ -340,7 +339,6 @@ a.ga, a.ga:hover {
 @media (max-width: 800px) {
 	header.up .title {display: inline-block;}
 	header .subtitle {display: none;} 
-	header.up .centered {top: inherit; position: inherit;}
 	header.down .subtitle {display: none;}
-	header.down .centered {position: relative; width: 100%; right: unset; text-align: center; margin-right: 0px;}
+	header.down .centered {position: relative; width: 100%; text-align: center; padding-right: 0px;}
 }
