--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -1,344 +1,340 @@
 
-:root {
-	--body-margin-top: 2vh;
-	--body-margin-bottom: 2vh;
-	--header-height: 10vh; 
-	--header-padding-top: 40vh;
-	--header-padding-bottom: 2vh;
-	--title-padding-bottom: 1vh;
-	--footer-height: 2vh;
-	--footer-margin: 2vh;
-	/* update IE workarounds below */
-}
-
-body {
-	margin-top: var(--body-margin-top);
-	margin-bottom: var(--body-margin-bottom);
-	margin-left: 2vw;
-	margin-right: 2vw;
-	font-size: large;
-	font-family: Ubuntu, Courier;
-	background-color: green;
-}
-/* IE10+ workaround */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	body { margin-top: 2vh; margin-bottom: 2vh; }
-}
-
-#wrapper {
-	min-height: calc(100vh - 2*var(--body-margin-top) - 2*var(--body-margin-bottom));
-	width: 50%;
-	margin: 0 auto;
-}
-/* IE10+ workaround */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	#wrapper { min-height: 92vh; } 
-}
-
-/* --- HEADER --- */
-
-header {
-	color: #cccccc;
-	padding-top: var(--header-padding-top);
-	padding-bottom: var(--header-padding-bottom);
-}
-
-/* IE10+ workaround */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	header { padding-top: 40vh; padding-bottom: 2vh; }
-}
-
-
-.title {	
-	font-size: 5vw;
-	letter-spacing: 1.5vw;
-	padding-bottom: var(--title-padding-bottom)
-}
-/* IE10+ workaround */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	.title { padding-bottom: 1vh; }
-}
-
-/* split class to hold styles for the main branching option */
-.split {
-	color: #cccccc;
-}
-
-.centered {
-	display: inline-block;
-	float: right;
-	padding-right: 1.5vw;
-}
-
-/* --- MENU --- */
-
-li.menulist {
-	padding: 1px 0px 1px 0px;
-}
-
-li.menulist a.selected {
-	font-weight: bold;
-}
-
-/* --- GENERAL --- */ 
-
-a {
-	color: #cccccc;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-/* --- BODY --- */ 
-
-section#content {
-	width: 75%;
-	float: left;
-	padding-bottom: 4%;
-	box-sizing: border-box;
-	background-color: green;
-	color: #cccccc;
-}
-
-section#content.border {
-	border-width: 0px 0px 1px 1px;
-	border-style: dashed;
-}
-
-nav#menu {
-	width: 25%;
-	float: right;
-	padding-bottom: 1%;
-	box-sizing: border-box;
-	background-color: green;
-	color: #cccccc;
-}
-
-nav#menu.border {
-	border-width: 0px 1px 1px 0px;
-	border-style: dashed;
-}
-
-nav#menu ul {
-	list-style-type: none;
-	padding-left: 10%;
-}
-
-nav#menu li:before {
-	content: " - ";
-	padding-right: 10px;
-}
-
-/* positioning of the group class to keep the footer stuck to the bottom */
-
-.group:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
-/* collapsible headers */
-
-h2 {
-	font-size: calc(1rem + 1vw);
-}
-
-h3 {
-	font-size: calc(1rem + 0.5vw); 
-}
-
-h2, h3 {
-	display: inline-block;
-}
-
-h2:hover, h3:hover {
-	text-decoration: underline;
-}
-
-h2.collapsible, h3.collapsible {
-	cursor: pointer;
-}
-
-h2.empty:hover, h3.empty:hover {
-	text-decoration: none;
-}
-
-h2.empty, h3.empty` {
-	cursor: default;
-}
-
-.lineset {
-	display: none; /* needed for slideDown */
-	border-style: dashed;
-	border-width: 0px 0px 0px 1px;
-	padding-left: 5%;
-}
-
-/* expand_more and expand_less icons */
-
-.bullet span.material-icons {
-	vertical-align: text-bottom;
-}
-
-.line span.material-icons {
-	vertical-align: middle;
-}
-
-/* indentations */
-
-.bullet {
-	padding-left: 10%;
-}
-
-.line {
-	display: none; /* needed for jQuery effects */
-	padding-left: 5%; 
-}
-
-.entry {
-	display: none; /* needed for jQuery effects */
-	padding-top: 1px;
-	padding-bottom: 1px;
-	padding-left: 5%;
-	padding-right: 1%; /* originally for the arenas dropdown */
-}
-
-.entryset {
-	display: none; /* needed for jQuery effects */
-	padding-left: 7.5%;
-	padding-top: 5px;
-	padding-bottom: 5px;
-}
-
-/* a few tailored styles for the arenas dropdown */
-#hoops .entryset.horiz  {
-	text-align: right;  
-	border-right-width: 1px;
-	border-right-style: dashed;
-	padding-left: 0px;
-}
-
-#arenas {
-	white-space: nowrap; /* don't wrap the dropdown arrow */
-}
-
-.entry a, .entry span {
-	padding-right: 1%;
-}
-
-span.role {
-	padding-left: 1%;
-	border-left-width: 1px;
-	border-left-style: dashed;
-}
-
-.role-wrap {
-	margin: 1px 0px 0px 1px;
-}
-
-.role-wrap .role {
-	padding-left: 1%;
-	padding-right: 1%;
-	border-left-width: 0px;
-}
-
-.role-wrap .role:first-child {
-	border-left-width: 1px;
-	border-left-style: dashed;
-}
-
-span.multi-entry {
-	padding-right: 0%;
-}
-
-a.multi-entry {
-	padding-left: 0.5%;
-	padding-right: 0%;
-}
-
-/* general effects */
-
-.entry .multi-entry:link, .entry .multi-entry:visited  {
-	text-decoration: none;
-}
-
-.entry a.multi-entry:hover {
-	text-decoration: underline;
-}
-
-.entry a:link, .entry a:visited, .line a:link, .line a:visited {
-	text-decoration: underline;
-}
-
-sup {
-	white-space: nowrap; 
-}
-
-/* --- FOOTER --- */
-
-footer {
-	width: 100%;
-	height: var(--footer-height);
-	margin-top: var(--footer-margin);
-	text-align: right;
-	font-size: small;
-	font-family: ubuntu, courier;
-	color: #ccc;
-}
-
-/* IE10+ workaround */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	footer { height:2vh; margin-top: 2vh;}
-}
-
-footer p {
-	display: none;
-	margin: 0px;
-}
-
-footer p.footlinks {
-	float: left;
-}
-
-a.ga, a.ga:hover {
-	text-decoration: none;
-	cursor: text;
-}
-
-/* Responsive overrides */
-
-@media (max-width: 1024px) {
-	footer p.copyright {visibility: hidden;} 
-}
-
-@media (max-width: 600px) {
-	nav#menu {width: 35%;}
-	section#content {width: 65%;}
-	nav#menu ul {padding-left: 0%;}
-	.bullet {padding-left: 7.5%;}
-	.lineset {padding-left: 5%;}
-	.line {width: max-content;}
-	.line {padding-left: 2.5%;}
-	.entryset {width: max-content;}
-	.entryset {padding-left: 7.5%;}
-	.entry {width: max-content;}
-	.entry {padding-left: 0%;}
-	.entry {font-size: small;}
-	.entry {white-space: nowrap;}
-}
-
-@media (max-width: 600px) {
-	span.material-icons {font-size: 12px;}
-	.bullet span.material-icons {vertical-align: initial;}
-}
-
-/* testing grounds */
-
-@media (max-width: 800px) {
-	header.up .title {display: inline-block;}
-	header .subtitle {display: none;} 
-	header.down .subtitle {display: none;}
-	header.down .centered {position: relative; width: 100%; text-align: center; padding-right: 0px;}
-}
+	:root {
+		--body-margin-top: 2vh;
+		--body-margin-bottom: 2vh;
+		--header-height: 10vh; 
+		--header-padding-top: 40vh;
+		--header-padding-bottom: 2vh;
+		--title-padding-bottom: 1vh;
+		--footer-height: 2vh;
+		--footer-margin: 2vh;
+		/* update IE workarounds below */
+	}
+
+	body {
+		margin-top: var(--body-margin-top);
+		margin-bottom: var(--body-margin-bottom);
+		margin-left: 2vw;
+		margin-right: 2vw;
+		font-size: calc(1rem + 0.25vw);
+		font-family: Ubuntu, Courier;
+		background-color: green;
+	}
+	/* IE10+ workaround */
+	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+		body { margin-top: 2vh; margin-bottom: 2vh; }
+	}
+
+	#wrapper {
+		min-height: calc(100vh - 2*var(--body-margin-top) - 2*var(--body-margin-bottom));
+		width: 45vw;
+		margin: 0 auto;
+	}
+	/* IE10+ workaround */
+	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+		#wrapper { min-height: 92vh; } 
+	}
+
+	/* --- HEADER --- */
+
+	header {
+		color: #cccccc;
+		padding-top: var(--header-padding-top);
+		padding-bottom: var(--header-padding-bottom);
+	}
+
+	/* IE10+ workaround */
+	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+		header { padding-top: 40vh; padding-bottom: 2vh; }
+	}
+
+
+	.title {	
+		font-size: calc(1rem + 3vw);
+		letter-spacing: 1.5vw;
+		padding-bottom: var(--title-padding-bottom)
+	}
+	/* IE10+ workaround */
+	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+		.title { padding-bottom: 1vh; }
+	}
+
+	/* split class to hold styles for the main branching option */
+	.split {
+		color: #cccccc;
+	}
+
+	.centered {
+		display: inline-block;
+		float: right;
+		padding-right: 1.5vw;
+	}
+
+	/* --- MENU --- */
+
+	li.menulist {
+		padding: 1px 0px 1px 0px;
+	}
+
+	li.menulist a.selected {
+		font-weight: bold;
+	}
+
+	/* --- GENERAL --- */ 
+
+	a {
+		color: #cccccc;
+		text-decoration: none;
+	}
+
+	a:hover {
+		text-decoration: underline;
+	}
+
+	/* --- BODY --- */ 
+
+	section#content {
+		width: 75%;
+		float: left;
+		padding-bottom: 4%;
+		box-sizing: border-box;
+		background-color: green;
+		color: #cccccc;
+	}
+
+	section#content.border {
+		border-width: 0px 0px 1px 1px;
+		border-style: dashed;
+	}
+
+	nav#menu {
+		width: 25%;
+		float: right;
+		padding-bottom: 1%;
+		box-sizing: border-box;
+		background-color: green;
+		color: #cccccc;
+	}
+
+	nav#menu.border {
+		border-width: 0px 1px 1px 0px;
+		border-style: dashed;
+	}
+
+	nav#menu ul {
+		list-style-type: none;
+		padding-left: 10%;
+	}
+
+	nav#menu li:before {
+		content: " - ";
+		padding-right: 10px;
+	}
+
+	/* positioning of the group class to keep the footer stuck to the bottom */
+
+	.group:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+
+	/* collapsible headers */
+
+	h2 {
+		font-size: calc(1rem + 1vw);
+	}
+
+	h3 {
+		font-size: calc(1rem + 0.5vw); 
+	}
+
+	h2, h3 {
+		display: inline-block;
+	}
+
+	h2:hover, h3:hover {
+		text-decoration: underline;
+	}
+
+	h2.collapsible, h3.collapsible {
+		cursor: pointer;
+	}
+
+	h2.empty:hover, h3.empty:hover {
+		text-decoration: none;
+	}
+
+	h2.empty, h3.empty` {
+		cursor: default;
+	}
+
+	.lineset {
+		display: none; /* needed for slideDown */
+		border-style: dashed;
+		border-width: 0px 0px 0px 1px;
+		padding-left: 5%;
+	}
+
+	/* expand_more and expand_less icons */
+
+	.bullet span.material-icons {
+		vertical-align: text-bottom;
+	}
+
+	.line span.material-icons {
+		vertical-align: middle;
+	}
+
+	/* indentations */
+
+	.bullet {
+		padding-left: 10%;
+	}
+
+	.line {
+		display: none; /* needed for jQuery effects */
+		padding-left: 5%; 
+	}
+
+	.entry {
+		display: none; /* needed for jQuery effects */
+		padding-top: 1px;
+		padding-bottom: 1px;
+		padding-left: 5%;
+		padding-right: 1%; /* originally for the arenas dropdown */
+	}
+
+	.entryset {
+		display: none; /* needed for jQuery effects */
+		padding-left: 7.5%;
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+
+	/* a few tailored styles for the arenas dropdown */
+	#hoops .entryset.horiz  {
+		text-align: right;  
+		border-right-width: 1px;
+		border-right-style: dashed;
+		padding-left: 0px;
+	}
+
+	#arenas {
+		white-space: nowrap; /* don't wrap the dropdown arrow */
+	}
+
+	.entry a, .entry span {
+		padding-right: 1%;
+	}
+
+	span.role {
+		padding-left: 1%;
+		border-left-width: 1px;
+		border-left-style: dashed;
+	}
+
+	.role-wrap {
+		margin: 1px 0px 0px 1px;
+	}
+
+	.role-wrap .role {
+		padding-left: 1%;
+		padding-right: 1%;
+		border-left-width: 0px;
+	}
+
+	.role-wrap .role:first-child {
+		border-left-width: 1px;
+		border-left-style: dashed;
+	}
+
+	span.multi-entry {
+		padding-right: 0%;
+	}
+
+	a.multi-entry {
+		padding-left: 0.5%;
+		padding-right: 0%;
+	}
+
+	/* general effects */
+
+	.entry .multi-entry:link, .entry .multi-entry:visited  {
+		text-decoration: none;
+	}
+
+	.entry a.multi-entry:hover {
+		text-decoration: underline;
+	}
+
+	.entry a:link, .entry a:visited, .line a:link, .line a:visited {
+		text-decoration: underline;
+	}
+
+	sup {
+		white-space: nowrap; 
+	}
+
+	/* --- FOOTER --- */
+
+	footer {
+		width: 100%;
+		height: var(--footer-height);
+		margin-top: var(--footer-margin);
+		text-align: right;
+		font-size: calc(1rem - 0.25vw);
+		font-family: ubuntu, courier;
+		color: #ccc;
+	}
+
+	/* IE10+ workaround */
+	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+		footer { height:2vh; margin-top: 2vh;}
+	}
+
+	footer p {
+		display: none;
+		margin: 0px;
+	}
+
+	footer p.footlinks {
+		float: left;
+	}
+
+	a.ga, a.ga:hover {
+		text-decoration: none;
+		cursor: text;
+	}
+
+	/* Responsive overrides */
+
+	@media (max-width: 1024px) {
+		footer p.copyright {visibility: hidden;} 
+	}
+
+	@media (max-width: 600px) {
+		nav#menu {width: 35%;}
+		section#content {width: 65%;}
+		nav#menu ul {padding-left: 0%;}
+		.bullet {padding-left: 7.5%;}
+		.lineset {padding-left: 5%;}
+		.line {width: max-content;}
+		.line {padding-left: 2.5%;}
+		.entryset {width: max-content;}
+		.entryset {padding-left: 7.5%;}
+		.entry {width: max-content;}
+		.entry {padding-left: 0%;}
+		.entry {font-size: calc(1rem - 0.5vw);}
+		.entry {white-space: nowrap;}
+		.role-wrap .role { display: block; border-left-width: 1px; border-left-style: dashed; }
+	}
+
+	@media (max-width: 600px) {
+		span.material-icons {font-size: 12px;}
+		.bullet span.material-icons {vertical-align: initial;}
+	}
+
+	@media (max-width: 800px) {
+		header.down .subtitle {display: none;}
+	}
