--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -311,7 +311,6 @@
 
 	@media (max-width: 850px) {
 		header.down .subtitle {display: none;}
-		
 		span.role { display: block; padding-left: 2.5%; margin-top: 2.5%;}
 		.role-wrap .role { display: block; border-left-width: 1px; border-left-style: dashed; padding-left: 2.5%; margin-top: 2.5%; margin-bottom: 2.5%;}
 		footer p.copyright {visibility: hidden;} 
@@ -331,7 +330,7 @@
 		.entry {padding-left: 0%;}
 		.entry {font-size: calc(1rem - 0.5vw);}
 		.entry {white-space: nowrap; padding-bottom: 1vh;}
-		.subtitle { font-size: calc(1rem - 0.5vw);}
+		.subtitle { font-size: calc(1rem - 0.5vw); vertical-align: top;}
 		.centered { font-size: calc(1rem - 0.5vw);}
 		.material-icons {font-size: 12px;}
 		.bullet .material-icons {vertical-align: initial;}
