--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -40,7 +40,7 @@
 	header {
 		color: #cccccc;
 		padding-top: var(--header-padding-top);
-		padding-bottom: var(--header-padding-bottom);
+		padding-bottom: calc(1rem + var(--header-padding-bottom));
 	}
 
 	/* IE10+ workaround */
@@ -96,10 +96,6 @@
 	}
 
 	/* --- BODY --- */ 
-
-	.group {
-		padding-top: var(--header-padding-bottom); /* change to --group-padding-top */
-	}
 	
 	section#content {
 		width: 75%;
