--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -4,7 +4,7 @@
 		--body-margin-bottom: 2vh;
 		--header-height: 10vh; 
 		--header-padding-top: 40vh;
-		--header-padding-bottom: 2vh;
+		--header-padding-bottom: calc(1vh + 1vw);
 		--title-padding-bottom: 1vh;
 		--footer-height: 2vh;
 		--footer-margin: 2vh;
