--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -273,6 +273,8 @@ a.multi-entry {
 
 .entry .multi-entry:link, .entry .multi-entry:visited  {
 	text-decoration: none;
+	font-size: 1rem;
+	vertical-align: super;
 }
 
 .entry a.multi-entry:hover {
